completed task 2 form

--- a/index.html
+++ b/index.html
@@ -75,7 +75,28 @@
             <div class="task-container-heading">
               <h3>Task heading 2</h3>
             </div>
-            <div class="task-container-content"></div>
+            <div class="task-container-content">
+              <div class="form-1">
+                <h3>Thread A</h3>
+                <div class="sub-thread-container">
+                  <h5>Sub Thread 1</h5>
+                  <textarea name="" id="" cols="10" rows="5"></textarea>
+                </div>
+                <div class="sub-thread-container">
+                  <h5>Sub interpretation 1</h5>
+                  <textarea name="" class="sub-thread-content" cols="10" rows="5"></textarea>
+                </div>
+                <button class="category-button">Select Category</button>
+                <button class="process-button">Select Process</button>
+                <button class="subthread-button">+ sub Thread</button>
+                <div class="sub-thread-container">
+                  <h5>Summary for Thread A</h5>
+                  <textarea name="" class="summary-content" cols="10" rows="5"></textarea>
+                </div>
+                <button>select emotion</button>
+                <button class="subthread-button">+ sub Thread</button>
+              </div>
+            </div>
           </div>
           <div class="task-container">
             <div class="task-container-heading">
