Added dropdown menu

--- a/index.html
+++ b/index.html
@@ -48,6 +48,22 @@
       </div>
     </nav>
     <div class="content-container">
+      <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
+  <label for="openSidebarMenu" class="sidebarIconToggle">
+    <div class="spinner diagonal part-1"></div>
+    <div class="spinner horizontal"></div>
+    <div class="spinner diagonal part-2"></div>
+  </label>
+  <div id="sidebarMenu">
+    <ul class="sidebarMenuInner">
+      <li>Journey Board</li>
+      <li><a href="" target="_blank">Company</a></li>
+      <li><a href="" target="_blank">Instagram</a></li>
+      <li><a href="" target="_blank">Twitter</a></li>
+      <li><a href="" target="_blank">YouTube</a></li>
+      <li><a href="" target="_blank">Linkedin</a></li>
+    </ul>
+  </div>
       <div class="asset-container">
         <div class="asset-container-heading">
           <h3>You Are Taking Challenge Of New Project</h3>
